test/errors/e05.gm
Procedure foo()
{
    Int G;
    Node(G) n;
}
